updated collab and comment sockets and added to api.yml
